--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "Vivace"
-version = "0.1.0"
+version = "0.1.1"
 description = "An improved lock screen for Windows"
 authors = ["William"]
 license = "MIT"
@@ -27,3 +27,4 @@ tauri-plugin-global-shortcut = "2.0.0"
 chrono = { version = "0.4", features = ["serde"] }
 dirs = "5.0"
 whoami = "1.4"
+lazy_static = "1.4"
